--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-lightbox": "^0.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^1.3.1",
+    "react-native-maps": "^1.10.0",
     "react-native-modal": "^9.0.0",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-modal-dropdown": "1.0.2",
