--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "moment": "2.29.4",
     "react": "18.2.0",
     "react-native": "0.73.1",
+    "react-native-animatable": "^1.4.0",
     "react-native-calendars": "1.1299.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-gifted-chat": "^0.11.3",
     "react-native-lightbox": "^0.8.0",
@@ -48,6 +50,7 @@
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-modal-dropdown": "1.0.2",
     "react-native-paper": "^3.1.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^1.13.4",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.5.0",
