--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@react-native-community/toolbar-android": "^0.2.1",
     "@react-native-firebase/app": "^18.8.0",
     "@react-native-firebase/auth": "^18.8.0",
+    "@react-native-firebase/database": "^18.8.0",
+    "@react-native-firebase/firestore": "^18.8.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/bottom-tabs": "^5.2.6",
     "@react-navigation/drawer": "^5.4.1",
@@ -32,6 +34,7 @@
     "@react-navigation/stack": "^5.2.10",
     "global": "^4.4.0",
     "i18n-js": "^3.2.1",
+    "install": "^0.13.0",
     "jetifier": "^1.6.5",
     "lodash": "^4.17.21",
     "moment": "2.29.4",
@@ -42,7 +45,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-gifted-chat": "^0.11.3",
-    "react-native-lightbox": "^0.8.0",
+    "react-native-lightbox": "^0.8.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^1.3.1",
     "react-native-maps": "^1.10.0",
