--- a/package.json
+++ b/package.json
@@ -45,14 +45,16 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-gifted-chat": "^0.11.3",
+    "react-native-gradients": "^2.1.1",
     "react-native-lightbox": "^0.8.1",
-    "react-native-linear-gradient": "^2.5.6",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^1.3.1",
     "react-native-maps": "^1.10.0",
     "react-native-modal": "^9.0.0",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-modal-dropdown": "1.0.2",
     "react-native-paper": "^3.1.1",
+    "react-native-radial-gradient": "^1.1.4",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^1.13.4",
     "react-native-safe-area-context": "^0.7.3",
